<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_first_item">Add your first Item~</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery name~</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save">Save item</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="exampleGrocery">ExampleGrocery</string>
    <string name="exampleQuantity">ExampleQuantity</string>
    <string name="exampleDate">Date: (example)</string>
    <string name="exampleDetail">Example Detail</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
</resources>
