<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:textStyle="italic"
                android:text="@string/enter_item"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryItem"
                android:layout_below="@id/title"
                android:hint="@string/hint_item"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryQty"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity_hint"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_below="@id/groceryQty"
                android:text="@string/save"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>